--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "LPCC",
-  "name": "Led Punks Classic Club",
+  "short_name": "TFGW",
+  "name": "The Future Galaxy Warrios",
   "icons": [
     {
       "src": "favicon.ico",
