--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
-  "CONTRACT_ADDRESS": "0xFA75d37b8607Eff73F9f418663B7c006C8f7449b",
-  "SCAN_LINK": "https://polygonscan.com/address/0xFA75d37b8607Eff73F9f418663B7c006C8f7449b",
+  "CONTRACT_ADDRESS": "Opensea",
+  "SCAN_LINK": "https://opensea.io/collection/thefuturegalaxywarrios/",
   "NETWORK": {
     "NAME": "Polygon",
     "SYMBOL": "Matic",
@@ -20,3 +20,6 @@
   "SHOW_BACKGROUND": false
 },
 
+0xFA75d37b8607Eff73F9f418663B7c006C8f7449b
+
+https://polygonscan.com/address/0xFA75d37b8607Eff73F9f418663B7c006C8f7449b
