--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "IW",
-  "name": "The Future Galaxy Warrios",
+  "short_name": "PCP3D",
+  "name": "PolyCube Punks 3D",
   "icons": [
     {
       "src": "favicon.ico",
