--- a/config/config.json
+++ b/config/config.json
@@ -6,8 +6,8 @@
     "SYMBOL": "Matic",
     "ID": 137
   },
-  "NFT_NAME": "The Future Galaxy Warrios",
-  "SYMBOL": "IW",
+  "NFT_NAME": "PolyCube Punks 3D",
+  "SYMBOL": "PCP3D",
   "MAX_SUPPLY": 10000,
   "WEI_COST": 100000000000000000,
   "DISPLAY_COST": 0.1,
