--- a/config/config.json
+++ b/config/config.json
@@ -11,7 +11,7 @@
   "MAX_SUPPLY": 10000,
   "WEI_COST": 200000000000000000,
   "DISPLAY_COST": 0.2,
-  "GAS_LIMIT": 285000,
+  "GAS_LIMIT": 1000000,
   "MARKETPLACE": "Opensea",
   "MARKETPLACE_LINK": "https://opensea.io/collection/polycube-punks-3d/",
   "SHOW_BACKGROUND": false
