--- a/config/config.json
+++ b/config/config.json
@@ -14,5 +14,5 @@
   "GAS_LIMIT": 285000,
   "MARKETPLACE": "Opensea",
   "MARKETPLACE_LINK": "https://opensea.io/collection/polycube-punks-3d/",
-  "SHOW_BACKGROUND": false
+  "SHOW_BACKGROUND": true
 }
