--- a/config/config.json
+++ b/config/config.json
@@ -11,6 +11,7 @@
   "MAX_SUPPLY": 10000,
   "WEI_COST": 100000000000000000,
   "DISPLAY_COST": 0.1,
+  "MAX_MINT_AMOUNT": = 50,
   "GAS_LIMIT": 285000,
   "MARKETPLACE": "Opensea",
   "MARKETPLACE_LINK": "https://opensea.io/collection/polycube-punks-3d/",
